--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,17 +36,14 @@ spring.datasource.tomcat.validation-query=SELECT 1
 spring.jpa.show-sql = true
 
 # ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# # CUSTOM CHANGES #
-# ==============================================================
-spring.queries.profile-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
-
-# ==============================================================
 # = Initialize the database using data.sql script
 # ==============================================================
 spring.datasource.initialization-mode=always
 
+# ==============================================================
+# = Enable JUNIT testing and debugging
+# ==============================================================
+spring.main.allow-bean-definition-overriding=true
 
 # ==============================================================
 # = SMTP configuration
