Bank Account patch for updating account balance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -166,7 +166,7 @@ spring.main.lazy-initialization=true
 # ==============================================================
 # = Initialize maven profiles
 # ==============================================================
-spring.profiles.active=@activatedProperties@
+spring.profiles.active=production
 
 # ==============================================================
 # = Initialize batch inserts
