--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id "org.sonarqube" version "3.3"
     id 'org.springframework.boot' version '2.1.3.RELEASE'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 }
@@ -62,5 +63,13 @@ task unpack(type: Copy) {
     dependsOn bootJar
     from(zipTree(tasks.bootJar.outputs.files.singleFile))
     into("build/dependency")
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "NagarjunNagesh_every-rupee-api"
+    property "sonar.organization", "blitzbudget"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
